# Codestacker

./: .Dockerfile  CityCrimes.ipynb  README.md  app.py  crime_model.pkl  pyproject.toml  requirements.txt  vectorizer.pkl
